objects/vlocity_cmt__OpportunityMember__c.object
<CustomObject>
    <description>Member record of the Opportunity group</description>
    <fields>
        <fullName>vlocity_cmt__Address1__c</fullName>
        <description>Additional address information - 1.</description>
        <label>Street Supplement 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AsyncOperation__c</fullName>
        <description>This stores the asynchronous operation name if this member locked for asynchronous operation.</description>
        <label>Async Operation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Apply To Group</fullName>
                </value>
                <value>
                    <fullName>Price And Validate</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Validate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__City__c</fullName>
        <description>City name information.</description>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Country__c</fullName>
        <description>Country name information.</description>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Email__c</fullName>
        <description>Email information.</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FirstName__c</fullName>
        <description>First name information.</description>
        <label>First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LastName__c</fullName>
        <description>Last name information.</description>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LockedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This indicates if a Opportunity member locked by a user.</description>
        <label>Locked By User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Opportunity Members</relationshipLabel>
        <relationshipName>OpportunityMembers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LockedFor__c</fullName>
        <description>This stores the reason for doing lock on opportunity member.</description>
        <label>Locked For</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Asynchronus Operation</fullName>
                </value>
                <value>
                    <fullName>Manual Edit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MSISDN__c</fullName>
        <description>MSISDN information.</description>
        <externalId>true</externalId>
        <label>MSISDN</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MemberData__c</fullName>
        <description>Member Data information.</description>
        <label>Member Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MemberType__c</fullName>
        <description>This store developer name of CPQ Member Type custom metadata.</description>
        <label>Member Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ServicePoint</fullName>
                    <label>Service Point</label>
                </value>
                <value>
                    <fullName>Premises</fullName>
                </value>
                <value>
                    <fullName>ServiceAccount</fullName>
                    <label>Service Account</label>
                </value>
                <value>
                    <fullName>SubscriberAccount</fullName>
                    <label>Subscriber</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OpportunityGroupId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Group to which the service point associated with this opportunity member is linked.</description>
        <label>Opportunity Group</label>
        <referenceTo>vlocity_cmt__OpportunityGroup__c</referenceTo>
        <relationshipLabel>Opportunity Members</relationshipLabel>
        <relationshipName>OpportunityMembers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OpportunityId__c</fullName>
        <description>This indicate parent opportunity of this record.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Members</relationshipLabel>
        <relationshipName>OpportunityMembers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PostalCode__c</fullName>
        <description>Postal code of the address for this member record</description>
        <label>Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PremisesId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to premises.</description>
        <label>Premises</label>
        <referenceTo>vlocity_cmt__Premises__c</referenceTo>
        <relationshipLabel>Opportunity Members</relationshipLabel>
        <relationshipName>OpportunityMembers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ServiceAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the account with record type Service that identifies the service location.</description>
        <label>Service Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunity Members</relationshipLabel>
        <relationshipName>OpportunityMembers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ServicePointId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to service point.</description>
        <label>Service Point</label>
        <referenceTo>vlocity_cmt__ServicePoint__c</referenceTo>
        <relationshipLabel>Opportunity Members</relationshipLabel>
        <relationshipName>OpportunityMembers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ServiceabilityData__c</fullName>
        <description>Serviceability Data information.</description>
        <label>Serviceability Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__State__c</fullName>
        <description>State name information.</description>
        <label>State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StreetAddress__c</fullName>
        <description>Street address information.</description>
        <label>Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Title__c</fullName>
        <description>Title information.</description>
        <label>Title</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>Opportunity Member</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>